// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest.config.js should validate : @typescript-eslint/{no-require-import,no-var-requires} off 1`] = `
Object {
  "errorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "results": Array [
    Object {
      "errorCount": 0,
      "filePath": Any<String>,
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": Array [],
      "warningCount": 0,
    },
  ],
  "usedDeprecatedRules": Array [],
  "warningCount": 0,
}
`;

exports[`should invalidate : @typescript-eslint case 1`] = `
Object {
  "errorCount": 1,
  "fixableErrorCount": 1,
  "fixableWarningCount": 0,
  "results": Array [
    Object {
      "errorCount": 1,
      "filePath": Any<String>,
      "fixableErrorCount": 1,
      "fixableWarningCount": 0,
      "messages": Array [
        Object {
          "column": 12,
          "endColumn": 21,
          "endLine": 2,
          "fix": Object {
            "range": Array [
              14,
              23,
            ],
            "text": "\\"a\\" | \\"b\\"",
          },
          "line": 2,
          "message": "Replace \`'a'·|·'b'\` with \`\\"a\\"·|·\\"b\\"\`",
          "nodeType": null,
          "ruleId": "prettier/prettier",
          "severity": 2,
        },
      ],
      "source": "//
type Foo = 'a' | 'b';
",
      "warningCount": 0,
    },
  ],
  "usedDeprecatedRules": Array [],
  "warningCount": 0,
}
`;

exports[`should invalidate : @typescript-eslint/{no-require-imports,no-var-requires} case 1`] = `
Object {
  "errorCount": 2,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "results": Array [
    Object {
      "errorCount": 2,
      "filePath": Any<String>,
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": Array [
        Object {
          "column": 21,
          "endColumn": 38,
          "endLine": 4,
          "line": 4,
          "message": "Require statement not part of import statement.",
          "messageId": "noVarReqs",
          "nodeType": "CallExpression",
          "ruleId": "@typescript-eslint/no-var-requires",
          "severity": 2,
        },
        Object {
          "column": 21,
          "endColumn": 38,
          "endLine": 4,
          "line": 4,
          "message": "A \`require()\` style import is forbidden.",
          "messageId": "noRequireImports",
          "nodeType": "CallExpression",
          "ruleId": "@typescript-eslint/no-require-imports",
          "severity": 2,
        },
      ],
      "source": "//
/* eslint \\"@typescript-eslint/no-unsafe-assignment\\": \\"off\\" */
/* eslint \\"@typescript-eslint/no-unsafe-call\\": \\"off\\" */
export var eslint = require(\\"eslint\\");
",
      "warningCount": 0,
    },
  ],
  "usedDeprecatedRules": Array [],
  "warningCount": 0,
}
`;

exports[`should invalidate : prettier case 1`] = `
Object {
  "errorCount": 1,
  "fixableErrorCount": 1,
  "fixableWarningCount": 0,
  "results": Array [
    Object {
      "errorCount": 1,
      "filePath": Any<String>,
      "fixableErrorCount": 1,
      "fixableWarningCount": 0,
      "messages": Array [
        Object {
          "column": 21,
          "endColumn": 21,
          "endLine": 2,
          "fix": Object {
            "range": Array [
              23,
              23,
            ],
            "text": ";",
          },
          "line": 2,
          "message": "Insert \`;\`",
          "nodeType": null,
          "ruleId": "prettier/prettier",
          "severity": 2,
        },
      ],
      "source": "//
export const foo = 1
",
      "warningCount": 0,
    },
  ],
  "usedDeprecatedRules": Array [],
  "warningCount": 0,
}
`;

exports[`should validate : @typescript-eslint/no-type-alias off 1`] = `
Object {
  "errorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "results": Array [
    Object {
      "errorCount": 0,
      "filePath": Any<String>,
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": Array [],
      "warningCount": 0,
    },
  ],
  "usedDeprecatedRules": Array [],
  "warningCount": 0,
}
`;

exports[`should validate : @typescript-eslint/prefer-readonly-parameter-types off 1`] = `
Object {
  "errorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "results": Array [
    Object {
      "errorCount": 0,
      "filePath": Any<String>,
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": Array [],
      "warningCount": 0,
    },
  ],
  "usedDeprecatedRules": Array [],
  "warningCount": 0,
}
`;

exports[`should validate : @typescript-eslint/typedef off 1`] = `
Object {
  "errorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "results": Array [
    Object {
      "errorCount": 0,
      "filePath": Any<String>,
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": Array [],
      "warningCount": 0,
    },
  ],
  "usedDeprecatedRules": Array [],
  "warningCount": 0,
}
`;

exports[`should validate : import/order alphabetize 1`] = `
Object {
  "errorCount": 0,
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "results": Array [
    Object {
      "errorCount": 0,
      "filePath": Any<String>,
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": Array [],
      "warningCount": 0,
    },
  ],
  "usedDeprecatedRules": Array [],
  "warningCount": 0,
}
`;
